kfileitem: cache group names

Since b1a0a7cfe704db2a0aa363fed4e03501f324df9e the group name is now
fetch in KFFileItem, it was previously fetched inside the file
kioworker.

Cache the group names in KFileItem using a thread local QMap.

BUG: 486956